--- a/trackvisualizer/Properties/Resources.resx
+++ b/trackvisualizer/Properties/Resources.resx
@@ -46,7 +46,7 @@
     
     mimetype: application/x-microsoft.net.object.binary.base64
     value   : The object must be serialized with 
-            : System.Serialization.Formatters.Binary.BinaryFormatter
+            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
             : and then encoded with base64 encoding.
     
     mimetype: application/x-microsoft.net.object.soap.base64
@@ -60,6 +60,7 @@
             : and then encoded with base64 encoding.
     -->
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
       <xsd:complexType>
         <xsd:choice maxOccurs="unbounded">
@@ -68,9 +69,10 @@
               <xsd:sequence>
                 <xsd:element name="value" type="xsd:string" minOccurs="0" />
               </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" />
+              <xsd:attribute name="name" use="required" type="xsd:string" />
               <xsd:attribute name="type" type="xsd:string" />
               <xsd:attribute name="mimetype" type="xsd:string" />
+              <xsd:attribute ref="xml:space" />
             </xsd:complexType>
           </xsd:element>
           <xsd:element name="assembly">
@@ -85,9 +87,10 @@
                 <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
                 <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
               </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" msdata:Ordinal="1" />
+              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
               <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
               <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
+              <xsd:attribute ref="xml:space" />
             </xsd:complexType>
           </xsd:element>
           <xsd:element name="resheader">
@@ -109,9 +112,281 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="SrtmFileDownloadHeightmapProvider_DownloadHeightmap_SrtmInterpNotFound" xml:space="preserve">
+    <value>Не найдена програма коррекции высот `{0}`</value>
+  </data>
+  <data name="AsterTileLocal_DownloadAndUnpack_UsingExistingGeotiffFormatted" xml:space="preserve">
+    <value>Найден файл {0}, использую как уже загруженный GEOTIFF</value>
+  </data>
+  <data name="AsterTileLocal_DownloadAndUnpack_ConnectingToAsterServer" xml:space="preserve">
+    <value>Соединение с сервером ASTER ({0})...</value>
+  </data>
+  <data name="AsterTileLocal_DownloadAndUnpack_LoadingTileFormatted" xml:space="preserve">
+    <value>Загрузка тайла {0} кБ / {1} кБ</value>
+  </data>
+  <data name="AsterTileLocal_DownloadAndUnpack_UnpackingFormatted" xml:space="preserve">
+    <value>Распаковка...</value>
+  </data>
+  <data name="AsterTileLocal_DownloadAndUnpack_Ready" xml:space="preserve">
+    <value>Готово</value>
+  </data>
+  <data name="SrtmFileDownloadHeightmapProvider_Description" xml:space="preserve">
+    <value>SRTM</value>
+  </data>
+  <data name="SrtmFileDownloadHeightmapProvider_DownloadHeightmap_DownloadingFormatted" xml:space="preserve">
+    <value>Загрузка {0}...</value>
+  </data>
+  <data name="SrtmFileDownloadHeightmapProvider_DownloadHeightmap_LoadProgressFormatted" xml:space="preserve">
+    <value>Загрузка {0:0.0} КБ...</value>
+  </data>
+  <data name="SrtmFileDownloadHeightmapProvider_DownloadHeightmap_Error404Reasons" xml:space="preserve">
+    <value>Удаленный сервер вернул 404 (не найден). Причины могут быть следующие:</value>
+  </data>
+  <data name="SrtmFileDownloadHeightmapProvider_DownloadHeightmap_E404NoSrtmOnServer" xml:space="preserve">
+    <value>🔘 SRTM-файлов для этого района нет на севрере</value>
+  </data>
+  <data name="SrtmFileDownloadHeightmapProvider_DownloadHeightmap_E404ServerAddrObsolete" xml:space="preserve">
+    <value>🔘 Адрес устарел и нужно искать следующий</value>
+  </data>
+  <data name="SrtmFileDownloadHeightmapProvider_DownloadHeightmap_E404ServerAddrInvalid" xml:space="preserve">
+    <value>🔘 Неверно прописан адрес сервера в окне загрузчика</value>
+  </data>
+  <data name="SrtmFileDownloadHeightmapProvider_DownloadHeightmap_UnpackingFormatted" xml:space="preserve">
+    <value>Распаковка {0}</value>
+  </data>
+  <data name="SrtmFileDownloadHeightmapProvider_DownloadHeightmap_ErrorNoHgtFileInArchive" xml:space="preserve">
+    <value>{0} - файл .hgt не найден в архиве, что-то не так</value>
+  </data>
+  <data name="SrtmFileDownloadHeightmapProvider_DownloadHeightmap_CleanupActionFormatted" xml:space="preserve">
+    <value>{0}.hgt, подчистка лакун... </value>
+  </data>
+  <data name="SrtmFileDownloadHeightmapProvider_DownloadHeightmap_UnpackingErrorFormatted_ManualActionRequired" xml:space="preserve">
+    <value>Ошибка при распаковке: `{0}`! Файл {1} загружен, но вам придётся распаковать его вручную. </value>
+  </data>
+  <data name="SrtmFileDownloadHeightmapProvider_ExecuteCommandAsync_ErrorGeneral" xml:space="preserve">
+    <value>Ошибка: </value>
+  </data>
+  <data name="SrtmFileDownloadHeightmapProvider_DownloadHeightmap_HeightmapReadyFormatted" xml:space="preserve">
+    <value>{0} готов. </value>
+  </data>
+  <data name="GpxLoaderMiddleware_Description" xml:space="preserve">
+    <value>GPX Gps Exchange format</value>
+  </data>
+  <data name="KmlLoaderMiddleware_Description" xml:space="preserve">
+    <value>KML Keyhole Markup Language</value>
+  </data>
+  <data name="HtmlReportExporter_Description" xml:space="preserve">
+    <value>HTML</value>
+  </data>
+  <data name="HtmlReportExporter_Export_SectionNumHeader" xml:space="preserve">
+    <value>#</value>
+  </data>
+  <data name="HtmlReportExporter_Export_SectionNameHeader" xml:space="preserve">
+    <value>Участок</value>
+  </data>
+  <data name="HtmlReportExporter_Export_SectionDistanceHeader" xml:space="preserve">
+    <value>Расстояние, км</value>
+  </data>
+  <data name="HtmlReportExporter_Export_TravelTimeHeader" xml:space="preserve">
+    <value>Ходовое время</value>
+  </data>
+  <data name="HtmlReportExporter_Export_AscentHeader" xml:space="preserve">
+    <value>Набор, м</value>
+  </data>
+  <data name="HtmlReportExporter_Export_DescentHeader" xml:space="preserve">
+    <value>Сброс, м</value>
+  </data>
+  <data name="HtmlReportExporter_Export_MaxHeightHeader" xml:space="preserve">
+    <value>Максимальная высота</value>
+  </data>
+  <data name="HtmlReportExporter_Export_TotalsRowLabel" xml:space="preserve">
+    <value>Всего за поход</value>
+  </data>
+  <data name="HtmlReportExporter_BuildHtml_ReportTitleTemplateFormatted" xml:space="preserve">
+    <value>Отчет на базе трека {0}</value>
+  </data>
+  <data name="HeightmapDownloaderVm_StartDownloadAsync_SelectSource" xml:space="preserve">
+    <value>Выберите источник для загрузки</value>
+  </data>
+  <data name="HeightmapDownloaderVm_Initialize_ErrorNoSourcesFound" xml:space="preserve">
+    <value>Отсутствуют источники для загрузки карт высоты</value>
+  </data>
+  <data name="TrackChartVm_YFormatter_ChartSubscriptHeightFormatted" xml:space="preserve">
+    <value>{0:0.} м</value>
+  </data>
+  <data name="TrackChartVm_XFormatter_ChartSubscriptLengthFormatted" xml:space="preserve">
+    <value>{0:0.} Км</value>
+  </data>
+  <data name="TrackChartVm_TrackChartVm_HeightSeriesTitle" xml:space="preserve">
+    <value>Высота</value>
+  </data>
+  <data name="TrackChartVm_TrackChartVm_SectionSeriesTitle" xml:space="preserve">
+    <value>Участок</value>
+  </data>
+  <data name="TrackChartVm_GetSectionLabel_FinishFormatted" xml:space="preserve">
+    <value>Finish {0:0.} Км</value>
+  </data>
+  <data name="TrackManagerVm_LoadTrackFromFileAsync_No_loader_middleware" xml:space="preserve">
+    <value>No loader middleware!</value>
+  </data>
+  <data name="TrackReportItemVm_NextSectionName_StubFinishName" xml:space="preserve">
+    <value>F</value>
+  </data>
+  <data name="TrackReportItemVm_SectionStartName_StubStartName" xml:space="preserve">
+    <value>S</value>
+  </data>
+  <data name="TrackReportItemVm_Comment_LeavingDrop" xml:space="preserve">
+    <value>оставляем заброску</value>
+  </data>
+  <data name="TrackReportItemVm_Comment_DropBeforeStart" xml:space="preserve">
+    <value>завозим заброску до начала маршрута</value>
+  </data>
+  <data name="TrackReportItemVm_Comment_PickingDrop" xml:space="preserve">
+    <value>забираем заброску</value>
+  </data>
+  <data name="TrackReportVm_ExportReportAsync_Err_Report_exporter_with_ID__0__unknown" xml:space="preserve">
+    <value>Report exporter with ID {0} unknown</value>
+  </data>
+  <data name="TrackReportVm_CreateReportAsync_ErrNoHeightmap" xml:space="preserve">
+    <value>Расчет прекращен из-за отсутствия карты высот</value>
+  </data>
+  <data name="TrackReportVm_CreateReportAsync_ErrNoTrack" xml:space="preserve">
+    <value>Не загружен трек</value>
+  </data>
+  <data name="TrackReportVm_CreateReportAsync_ErrNoPointsInTrack" xml:space="preserve">
+    <value>Недостаточно точек в треке</value>
+  </data>
+  <data name="TrackReportVm_CreateReportAsync_ErrNotEnoughPoints" xml:space="preserve">
+    <value>Недостаточно точек разбиения на дни</value>
+  </data>
+  <data name="TrackReportVm_CreateReportAsync_SplittingTrack" xml:space="preserve">
+    <value>Разбиение трека на дни</value>
+  </data>
+  <data name="TrackReportVm_CreateReportAsync_ErrSplitEmptyCantContinue" xml:space="preserve">
+    <value>Разбивка пуста! Невозможно распилить трек на дни.</value>
+  </data>
+  <data name="TrackReportVm_CreateReportAsync_RefiningSplit" xml:space="preserve">
+    <value>Уточнение разбивки</value>
+  </data>
+  <data name="TrackReportVm_CreateReportAsync_DeltaCalculation" xml:space="preserve">
+    <value>Расчет перепадов</value>
+  </data>
+  <data name="TrackReportVm_CreateReportAsync_ErrHeightmapInvalid" xml:space="preserve">
+    <value>В файле высот &lt;{0}&gt; обнаружены неверные значения.
+Запустите из командной строки
+
+srtm_interp {1}
+
+иначе все расчеты, зависящие от высоты, будут совершенно бредовыми!</value>
+  </data>
+  <data name="TrackVm_LoadTracksFromFile_GeneralErrDuringFileLoad" xml:space="preserve">
+    <value>Ошибка при загрузке файла!</value>
+  </data>
+  <data name="TrackVm_LoadTracksFromFile_TrackNotFound" xml:space="preserve">
+    <value>Нет трека в файле!</value>
+  </data>
+  <data name="TrackVm_LoadTracksFromFile_MergingTracksFormatted" xml:space="preserve">
+    <value>Склеиваю {0} треков</value>
+  </data>
+  <data name="TrackVm_LoadTracksFromFile_SingleTrackLoaded" xml:space="preserve">
+    <value>Загружен 1 трек</value>
+  </data>
+  <data name="TrackVm_LoadTracksFromFile_LoadingHeightmap" xml:space="preserve">
+    <value>Загрузка данных высот (SRTM)</value>
+  </data>
+  <data name="TrackVm_LoadTracksFromFile_HeightmapsRequired" xml:space="preserve">
+    <value>Для трека 1 необходимы файлы </value>
+  </data>
+  <data name="TrackVm_LoadTracksFromFile_LoadingHeightmaps" xml:space="preserve">
+    <value>Загрузка файлов...</value>
+  </data>
+  <data name="TrackVm_LoadTracksFromFile_ErrHeightmapsMissing" xml:space="preserve">
+    <value>На этапе загрузки SRTM не найдены следующие карты высот:</value>
+  </data>
+  <data name="TrackVm_LoadTracksFromFile_ErrHeightmapDownloadRequired" xml:space="preserve">
+    <value>Их необходимо загрузить с сервера NASA или иного источника</value>
+  </data>
+  <data name="TrackVm_LoadTracksFromFile_AllHeightmapsLoadedOk" xml:space="preserve">
+    <value>Все SRTM файлы загружены успешно!</value>
+  </data>
+  <data name="TrackVm_LoadTracksFromFile_TrackLoadedOk" xml:space="preserve">
+    <value>Загрузка трека завершена успено</value>
+  </data>
+  <data name="TrackVm_ValidateSlicepoints_NotEnoughSlicepoints" xml:space="preserve">
+    <value>В выбранном файле недостаточно точек для разбиения трека по дням! Теперь точки нужно загрузить отдельно, либо пересохранить выбранный .gpx файл уже с точками.</value>
+  </data>
+  <data name="TrackVm_ValidateSlicepoints_FoundNSlicepointsFormatted" xml:space="preserve">
+    <value>Загружено {0} точек</value>
+  </data>
+  <data name="MainWindow_HeightmapHeader" xml:space="preserve">
+    <value>Высотный график</value>
+  </data>
+  <data name="MainWindow_LoadButtonTitle" xml:space="preserve">
+    <value>Открыть файл с треком</value>
+  </data>
+  <data name="MainWindow_LoadingLabel" xml:space="preserve">
+    <value>Загрузка...</value>
+  </data>
+  <data name="MainWindow_LoadTrackLabel" xml:space="preserve">
+    <value>Загрузить трек</value>
+  </data>
+  <data name="MainWindow_RouteHeader" xml:space="preserve">
+    <value>Маршрут</value>
+  </data>
+  <data name="MainWindow_Route_ExportLabel" xml:space="preserve">
+    <value>Экспорт</value>
+  </data>
+  <data name="MainWindow_Route_HeightmapsMissingLabel" xml:space="preserve">
+    <value>Отсутствуют карты высот</value>
+  </data>
+  <data name="MainWindow_LoadHeightmaps_Label" xml:space="preserve">
+    <value>Загрузить карты высот</value>
+  </data>
+  <data name="MainWindow_Title" xml:space="preserve">
+    <value>Работа с треком</value>
+  </data>
+  <data name="MainWindow_Route_AscentHeader" xml:space="preserve">
+    <value>Набор за день</value>
+  </data>
+  <data name="MainWindow_Route_BackpackWeightFHeader" xml:space="preserve">
+    <value>Вес рюкзака, Ж</value>
+  </data>
+  <data name="MainWindow_Route_BackpackWeightMHeader" xml:space="preserve">
+    <value>Вес рюкзака, М</value>
+  </data>
+  <data name="MainWindow_Route_DeltaHeightHeader" xml:space="preserve">
+    <value>Перепад за день</value>
+  </data>
+  <data name="MainWindow_Route_DescentHeader" xml:space="preserve">
+    <value>Сброс за день</value>
+  </data>
+  <data name="MainWindow_Route_DistanceHeader" xml:space="preserve">
+    <value>Расстояние</value>
+  </data>
+  <data name="MainWindow_Route_FietsHeader" xml:space="preserve">
+    <value>Индекс FIETS</value>
+  </data>
+  <data name="MainWindow_Route_FinHeightHeader" xml:space="preserve">
+    <value>Высота ночевки</value>
+  </data>
+  <data name="MainWindow_Route_MaxHeightHeader" xml:space="preserve">
+    <value>Максимальная высота</value>
+  </data>
+  <data name="MainWindow_Route_NotableHeightsHeader" xml:space="preserve">
+    <value>Основные высоты на участке</value>
+  </data>
+  <data name="MainWindow_Route_SectionHeader" xml:space="preserve">
+    <value>Участок</value>
+  </data>
+  <data name="MainWindow_Route_SectionNumHeader" xml:space="preserve">
+    <value>#</value>
+  </data>
+  <data name="MainWindow_Route_TimeHeader" xml:space="preserve">
+    <value>Ходовое время</value>
+  </data>
 </root>
