--- a/trackvisualizer/Properties/Resources.resx
+++ b/trackvisualizer/Properties/Resources.resx
@@ -118,61 +118,61 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="SrtmFileDownloadHeightmapProvider_DownloadHeightmap_SrtmInterpNotFound" xml:space="preserve">
-    <value>Не найдена програма коррекции высот `{0}`</value>
+    <value>Missing height-correction utility `{0}`</value>
   </data>
   <data name="AsterTileLocal_DownloadAndUnpack_UsingExistingGeotiffFormatted" xml:space="preserve">
-    <value>Найден файл {0}, использую как уже загруженный GEOTIFF</value>
+    <value>Found file{0}, using as preloaded GEOTIFF</value>
   </data>
   <data name="AsterTileLocal_DownloadAndUnpack_ConnectingToAsterServer" xml:space="preserve">
-    <value>Соединение с сервером ASTER ({0})...</value>
+    <value>Connecting to ASTER ({0})...</value>
   </data>
   <data name="AsterTileLocal_DownloadAndUnpack_LoadingTileFormatted" xml:space="preserve">
-    <value>Загрузка тайла {0} кБ / {1} кБ</value>
+    <value>Loading tile {0} Kb / {1} kB</value>
   </data>
   <data name="AsterTileLocal_DownloadAndUnpack_UnpackingFormatted" xml:space="preserve">
-    <value>Распаковка...</value>
+    <value>Unpacking...</value>
   </data>
   <data name="AsterTileLocal_DownloadAndUnpack_Ready" xml:space="preserve">
-    <value>Готово</value>
+    <value>Ready</value>
   </data>
   <data name="SrtmFileDownloadHeightmapProvider_Description" xml:space="preserve">
     <value>SRTM</value>
   </data>
   <data name="SrtmFileDownloadHeightmapProvider_DownloadHeightmap_DownloadingFormatted" xml:space="preserve">
-    <value>Загрузка {0}...</value>
+    <value>Loading {0}...</value>
   </data>
   <data name="SrtmFileDownloadHeightmapProvider_DownloadHeightmap_LoadProgressFormatted" xml:space="preserve">
-    <value>Загрузка {0:0.0} КБ...</value>
+    <value>Loading {0:0.0} Kb...</value>
   </data>
   <data name="SrtmFileDownloadHeightmapProvider_DownloadHeightmap_Error404Reasons" xml:space="preserve">
-    <value>Удаленный сервер вернул 404 (не найден). Причины могут быть следующие:</value>
+    <value>Remote server responded with 404 (not found). Cause could be:</value>
   </data>
   <data name="SrtmFileDownloadHeightmapProvider_DownloadHeightmap_E404NoSrtmOnServer" xml:space="preserve">
-    <value>🔘 SRTM-файлов для этого района нет на севрере</value>
+    <value>🔘 Server doesn't have SRTMs for this region</value>
   </data>
   <data name="SrtmFileDownloadHeightmapProvider_DownloadHeightmap_E404ServerAddrObsolete" xml:space="preserve">
-    <value>🔘 Адрес устарел и нужно искать следующий</value>
+    <value>🔘 Server address obsolete, you have to look for fresh one</value>
   </data>
   <data name="SrtmFileDownloadHeightmapProvider_DownloadHeightmap_E404ServerAddrInvalid" xml:space="preserve">
-    <value>🔘 Неверно прописан адрес сервера в окне загрузчика</value>
+    <value>🔘 Invalid server address in loader window</value>
   </data>
   <data name="SrtmFileDownloadHeightmapProvider_DownloadHeightmap_UnpackingFormatted" xml:space="preserve">
-    <value>Распаковка {0}</value>
+    <value>Unpacking {0}</value>
   </data>
   <data name="SrtmFileDownloadHeightmapProvider_DownloadHeightmap_ErrorNoHgtFileInArchive" xml:space="preserve">
-    <value>{0} - файл .hgt не найден в архиве, что-то не так</value>
+    <value>{0} - .hgt file missing in archive, something is wrong</value>
   </data>
   <data name="SrtmFileDownloadHeightmapProvider_DownloadHeightmap_CleanupActionFormatted" xml:space="preserve">
-    <value>{0}.hgt, подчистка лакун... </value>
+    <value>{0}.hgt, cleaning up voids... </value>
   </data>
   <data name="SrtmFileDownloadHeightmapProvider_DownloadHeightmap_UnpackingErrorFormatted_ManualActionRequired" xml:space="preserve">
-    <value>Ошибка при распаковке: `{0}`! Файл {1} загружен, но вам придётся распаковать его вручную. </value>
+    <value>Error unpacking: `{0}`! File {1} loaded, but you have to unpack it manually</value>
   </data>
   <data name="SrtmFileDownloadHeightmapProvider_ExecuteCommandAsync_ErrorGeneral" xml:space="preserve">
-    <value>Ошибка: </value>
+    <value>Errror: </value>
   </data>
   <data name="SrtmFileDownloadHeightmapProvider_DownloadHeightmap_HeightmapReadyFormatted" xml:space="preserve">
-    <value>{0} готов. </value>
+    <value>{0} ready. </value>
   </data>
   <data name="GpxLoaderMiddleware_Description" xml:space="preserve">
     <value>GPX Gps Exchange format</value>
@@ -187,49 +187,49 @@
     <value>#</value>
   </data>
   <data name="HtmlReportExporter_Export_SectionNameHeader" xml:space="preserve">
-    <value>Участок</value>
+    <value>Section</value>
   </data>
   <data name="HtmlReportExporter_Export_SectionDistanceHeader" xml:space="preserve">
-    <value>Расстояние, км</value>
+    <value>Distance, km</value>
   </data>
   <data name="HtmlReportExporter_Export_TravelTimeHeader" xml:space="preserve">
-    <value>Ходовое время</value>
+    <value>Travel time</value>
   </data>
   <data name="HtmlReportExporter_Export_AscentHeader" xml:space="preserve">
-    <value>Набор, м</value>
+    <value>Elevation gain, m</value>
   </data>
   <data name="HtmlReportExporter_Export_DescentHeader" xml:space="preserve">
-    <value>Сброс, м</value>
+    <value>Elevation loss, m</value>
   </data>
   <data name="HtmlReportExporter_Export_MaxHeightHeader" xml:space="preserve">
-    <value>Максимальная высота</value>
+    <value>Maximum height</value>
   </data>
   <data name="HtmlReportExporter_Export_TotalsRowLabel" xml:space="preserve">
-    <value>Всего за поход</value>
+    <value>Travel totals</value>
   </data>
   <data name="HtmlReportExporter_BuildHtml_ReportTitleTemplateFormatted" xml:space="preserve">
-    <value>Отчет на базе трека {0}</value>
+    <value>Report based on track {0}</value>
   </data>
   <data name="HeightmapDownloaderVm_StartDownloadAsync_SelectSource" xml:space="preserve">
-    <value>Выберите источник для загрузки</value>
+    <value>Select download source</value>
   </data>
   <data name="HeightmapDownloaderVm_Initialize_ErrorNoSourcesFound" xml:space="preserve">
-    <value>Отсутствуют источники для загрузки карт высоты</value>
+    <value>Missing sources for heightmaps download</value>
   </data>
   <data name="TrackChartVm_YFormatter_ChartSubscriptHeightFormatted" xml:space="preserve">
-    <value>{0:0.} м</value>
+    <value>{0:0.} m</value>
   </data>
   <data name="TrackChartVm_XFormatter_ChartSubscriptLengthFormatted" xml:space="preserve">
-    <value>{0:0.} Км</value>
+    <value>{0:0.} Km</value>
   </data>
   <data name="TrackChartVm_TrackChartVm_HeightSeriesTitle" xml:space="preserve">
-    <value>Высота</value>
+    <value>Height</value>
   </data>
   <data name="TrackChartVm_TrackChartVm_SectionSeriesTitle" xml:space="preserve">
-    <value>Участок</value>
+    <value>Section</value>
   </data>
   <data name="TrackChartVm_GetSectionLabel_FinishFormatted" xml:space="preserve">
-    <value>Finish {0:0.} Км</value>
+    <value>Finish {0:0.} Km</value>
   </data>
   <data name="TrackManagerVm_LoadTrackFromFileAsync_No_loader_middleware" xml:space="preserve">
     <value>No loader middleware!</value>
@@ -241,152 +241,154 @@
     <value>S</value>
   </data>
   <data name="TrackReportItemVm_Comment_LeavingDrop" xml:space="preserve">
-    <value>оставляем заброску</value>
+    <value>leaving supply stash</value>
   </data>
   <data name="TrackReportItemVm_Comment_DropBeforeStart" xml:space="preserve">
-    <value>завозим заброску до начала маршрута</value>
+    <value>supply stash is placed before route start</value>
   </data>
   <data name="TrackReportItemVm_Comment_PickingDrop" xml:space="preserve">
-    <value>забираем заброску</value>
+    <value>picking supply stash</value>
   </data>
   <data name="TrackReportVm_ExportReportAsync_Err_Report_exporter_with_ID__0__unknown" xml:space="preserve">
     <value>Report exporter with ID {0} unknown</value>
   </data>
   <data name="TrackReportVm_CreateReportAsync_ErrNoHeightmap" xml:space="preserve">
-    <value>Расчет прекращен из-за отсутствия карты высот</value>
+    <value>Calculation stopped due to missing heightmaps</value>
   </data>
   <data name="TrackReportVm_CreateReportAsync_ErrNoTrack" xml:space="preserve">
-    <value>Не загружен трек</value>
+    <value>Track not loaded</value>
   </data>
   <data name="TrackReportVm_CreateReportAsync_ErrNoPointsInTrack" xml:space="preserve">
-    <value>Недостаточно точек в треке</value>
+    <value>Not enough points in track</value>
   </data>
   <data name="TrackReportVm_CreateReportAsync_ErrNotEnoughPoints" xml:space="preserve">
-    <value>Недостаточно точек разбиения на дни</value>
+    <value>Not enough waypoints to split track</value>
   </data>
   <data name="TrackReportVm_CreateReportAsync_SplittingTrack" xml:space="preserve">
-    <value>Разбиение трека на дни</value>
+    <value>Splitting track to day sections</value>
   </data>
   <data name="TrackReportVm_CreateReportAsync_ErrSplitEmptyCantContinue" xml:space="preserve">
-    <value>Разбивка пуста! Невозможно распилить трек на дни.</value>
+    <value>Empy track split! Couldnt split track to day sections</value>
   </data>
   <data name="TrackReportVm_CreateReportAsync_RefiningSplit" xml:space="preserve">
-    <value>Уточнение разбивки</value>
+    <value>Refining track split</value>
   </data>
   <data name="TrackReportVm_CreateReportAsync_DeltaCalculation" xml:space="preserve">
-    <value>Расчет перепадов</value>
+    <value>Calculating elevation delta</value>
   </data>
   <data name="TrackReportVm_CreateReportAsync_ErrHeightmapInvalid" xml:space="preserve">
-    <value>В файле высот &lt;{0}&gt; обнаружены неверные значения.
-Запустите из командной строки
-
+    <value>Heightmap &lt;{0}&gt; has invalid values.
+Run
 srtm_interp {1}
-
-иначе все расчеты, зависящие от высоты, будут совершенно бредовыми!</value>
+using command line.
+Otherwise, you'll get completely invalid height calculations!</value>
   </data>
   <data name="TrackVm_LoadTracksFromFile_GeneralErrDuringFileLoad" xml:space="preserve">
-    <value>Ошибка при загрузке файла!</value>
+    <value>Error while loading file!</value>
   </data>
   <data name="TrackVm_LoadTracksFromFile_TrackNotFound" xml:space="preserve">
-    <value>Нет трека в файле!</value>
+    <value>No track in file!</value>
   </data>
   <data name="TrackVm_LoadTracksFromFile_MergingTracksFormatted" xml:space="preserve">
-    <value>Склеиваю {0} треков</value>
+    <value>Glueing {0} tracks</value>
   </data>
   <data name="TrackVm_LoadTracksFromFile_SingleTrackLoaded" xml:space="preserve">
-    <value>Загружен 1 трек</value>
+    <value>One track loaded</value>
   </data>
   <data name="TrackVm_LoadTracksFromFile_LoadingHeightmap" xml:space="preserve">
-    <value>Загрузка данных высот (SRTM)</value>
+    <value>Loading heightmaps (SRTM)</value>
   </data>
   <data name="TrackVm_LoadTracksFromFile_HeightmapsRequired" xml:space="preserve">
-    <value>Для трека 1 необходимы файлы </value>
+    <value>Track requires heightmaps </value>
   </data>
   <data name="TrackVm_LoadTracksFromFile_LoadingHeightmaps" xml:space="preserve">
-    <value>Загрузка файлов...</value>
+    <value>Loading files...</value>
   </data>
   <data name="TrackVm_LoadTracksFromFile_ErrHeightmapsMissing" xml:space="preserve">
-    <value>На этапе загрузки SRTM не найдены следующие карты высот:</value>
+    <value>Following SRTMs are found missing during load:</value>
   </data>
   <data name="TrackVm_LoadTracksFromFile_ErrHeightmapDownloadRequired" xml:space="preserve">
-    <value>Их необходимо загрузить с сервера NASA или иного источника</value>
+    <value>They have to be loaded from NASA server or similiar source</value>
   </data>
   <data name="TrackVm_LoadTracksFromFile_AllHeightmapsLoadedOk" xml:space="preserve">
-    <value>Все SRTM файлы загружены успешно!</value>
+    <value>All SRTM files loaded OK!</value>
   </data>
   <data name="TrackVm_LoadTracksFromFile_TrackLoadedOk" xml:space="preserve">
-    <value>Загрузка трека завершена успено</value>
+    <value>Track loaded successfully</value>
   </data>
   <data name="TrackVm_ValidateSlicepoints_NotEnoughSlicepoints" xml:space="preserve">
-    <value>В выбранном файле недостаточно точек для разбиения трека по дням! Теперь точки нужно загрузить отдельно, либо пересохранить выбранный .gpx файл уже с точками.</value>
+    <value>Selected track doesnt have enough waypoints to split by day sections! You have to specify waypoint source additionally, or resave selected track file with waypoints included.</value>
   </data>
   <data name="TrackVm_ValidateSlicepoints_FoundNSlicepointsFormatted" xml:space="preserve">
-    <value>Загружено {0} точек</value>
+    <value>Loaded {0} waypoints</value>
   </data>
   <data name="MainWindow_HeightmapHeader" xml:space="preserve">
-    <value>Высотный график</value>
+    <value>Elevation profile</value>
   </data>
   <data name="MainWindow_LoadButtonTitle" xml:space="preserve">
-    <value>Открыть файл с треком</value>
+    <value>Open track file</value>
   </data>
   <data name="MainWindow_LoadingLabel" xml:space="preserve">
-    <value>Загрузка...</value>
+    <value>Loading...</value>
   </data>
   <data name="MainWindow_LoadTrackLabel" xml:space="preserve">
-    <value>Загрузить трек</value>
+    <value>Load track</value>
   </data>
   <data name="MainWindow_RouteHeader" xml:space="preserve">
-    <value>Маршрут</value>
+    <value>Route</value>
   </data>
   <data name="MainWindow_Route_ExportLabel" xml:space="preserve">
-    <value>Экспорт</value>
+    <value>Export</value>
   </data>
   <data name="MainWindow_Route_HeightmapsMissingLabel" xml:space="preserve">
-    <value>Отсутствуют карты высот</value>
+    <value>Heightmaps missing</value>
   </data>
   <data name="MainWindow_LoadHeightmaps_Label" xml:space="preserve">
-    <value>Загрузить карты высот</value>
+    <value>Load heightmaps</value>
   </data>
   <data name="MainWindow_Title" xml:space="preserve">
-    <value>Работа с треком</value>
+    <value>Travel planning</value>
   </data>
   <data name="MainWindow_Route_AscentHeader" xml:space="preserve">
-    <value>Набор за день</value>
+    <value>Gain per day, m</value>
   </data>
   <data name="MainWindow_Route_BackpackWeightFHeader" xml:space="preserve">
-    <value>Вес рюкзака, Ж</value>
+    <value>Backpack weight F, kg</value>
   </data>
   <data name="MainWindow_Route_BackpackWeightMHeader" xml:space="preserve">
-    <value>Вес рюкзака, М</value>
+    <value>Backpack weight M, kg</value>
   </data>
   <data name="MainWindow_Route_DeltaHeightHeader" xml:space="preserve">
-    <value>Перепад за день</value>
+    <value>Elevation delta sum, m</value>
   </data>
   <data name="MainWindow_Route_DescentHeader" xml:space="preserve">
-    <value>Сброс за день</value>
+    <value>Elevation loss, m</value>
   </data>
   <data name="MainWindow_Route_DistanceHeader" xml:space="preserve">
-    <value>Расстояние</value>
+    <value>Distance, km</value>
   </data>
   <data name="MainWindow_Route_FietsHeader" xml:space="preserve">
-    <value>Индекс FIETS</value>
+    <value>FIETS Index</value>
   </data>
   <data name="MainWindow_Route_FinHeightHeader" xml:space="preserve">
-    <value>Высота ночевки</value>
+    <value>Sleep height, m</value>
   </data>
   <data name="MainWindow_Route_MaxHeightHeader" xml:space="preserve">
-    <value>Максимальная высота</value>
+    <value>Maximum height, m</value>
   </data>
   <data name="MainWindow_Route_NotableHeightsHeader" xml:space="preserve">
-    <value>Основные высоты на участке</value>
+    <value>Main heights, m</value>
   </data>
   <data name="MainWindow_Route_SectionHeader" xml:space="preserve">
-    <value>Участок</value>
+    <value>Section</value>
   </data>
   <data name="MainWindow_Route_SectionNumHeader" xml:space="preserve">
     <value>#</value>
   </data>
   <data name="MainWindow_Route_TimeHeader" xml:space="preserve">
-    <value>Ходовое время</value>
+    <value>Travel time, h</value>
+  </data>
+  <data name="TrackReportVm_ExportReportAsync_Select_report_format" xml:space="preserve">
+    <value>Select report format</value>
   </data>
 </root>
