--- a/trackvisualizer/Properties/Resources.uk.resx
+++ b/trackvisualizer/Properties/Resources.uk.resx
@@ -404,4 +404,19 @@ srtm_interp {1}
   <data name="SettingsWindow_Language" xml:space="preserve">
     <value>Мова</value>
   </data>
+  <data name="HeightmapDownloaderWindow_Cancel" xml:space="preserve">
+    <value>Скасувати</value>
+  </data>
+  <data name="HeightmapDownloaderWindow_HeightmapProvider" xml:space="preserve">
+    <value>Провайдер карти висот</value>
+  </data>
+  <data name="HeightmapDownloaderWindow_Load" xml:space="preserve">
+    <value>Завантажити</value>
+  </data>
+  <data name="HeightmapDownloaderWindow_SrtmTemplate" xml:space="preserve">
+    <value>Шаблон адреси для завантаження файлів SRTM</value>
+  </data>
+  <data name="HeightmapDownloaderWindow_WindowTitle" xml:space="preserve">
+    <value>Завантаження карти висот</value>
+  </data>
 </root>
