--- a/trackvisualizer/Properties/Resources.resx
+++ b/trackvisualizer/Properties/Resources.resx
@@ -418,4 +418,7 @@ Otherwise, you'll get completely invalid height calculations!</value>
   <data name="HeightmapDownloaderWindow_WindowTitle" xml:space="preserve">
     <value>Heightmap download</value>
   </data>
+  <data name="ErrorWindow_Error" xml:space="preserve">
+    <value>Error</value>
+  </data>
 </root>
